# atlas_hand_ROS2

./: .gitignore  README.md  package.xml  requirements.txt  setup.cfg  setup.py
atlas_hand/: config.py
atlas_hand/core/: hand_configs.py  hand_spherical_fk.py
atlas_hand/nodes/: osc_receiver.py  retargeting.py  visualizer.py
config/: hand_data.json
docker/: Dockerfile  README.md  docker.sh
launch/: atlas_hand.launch.py  left_hand_view.launch.py  right_hand_view.launch.py
readme/: topics.md
rviz/: left_hand_view.rviz  right_hand_view.rviz
urdf/hands/: hx5_d20_left.urdf  hx5_d20_right.urdf
urdf/left_hand/meshes/stl/: index_dip.stl  index_mcp.stl  index_pip.stl  middle_dip.stl  middle_mcp.stl  middle_pip.stl  pinky_dip.stl  pinky_mcp.stl  pinky_pip.stl  ring_dip.stl  ring_mcp.stl  ring_pip.stl  thumb_cmc0.stl  thumb_cmc1.stl  thumb_ip.stl  thumb_mcp.stl  wrist_left.stl
urdf/left_hand/urdf/: left_hand_rerun.urdf
urdf/right_hand/meshes/stl/: index_dip.stl  index_mcp.stl  index_pip.stl  middle_dip.stl  middle_mcp.stl  middle_pip.stl  pinky_dip.stl  pinky_mcp.stl  pinky_pip.stl  ring_dip.stl  ring_mcp.stl  ring_pip.stl  thumb_cmc0.stl  thumb_cmc1.stl  thumb_ip.stl  thumb_mcp.stl  wrist_right.stl
urdf/right_hand/meshes/stl_origin/: index_dip.stl  index_mcp.stl  index_pip.stl  middle_dip.stl  middle_mcp.stl  middle_pip.stl  pinky_dip.stl  pinky_mcp.stl  pinky_pip.stl  ring_dip.stl  ring_mcp.stl  ring_pip.stl  thumb_cmc0.stl  thumb_cmc1.stl  thumb_ip.stl  thumb_mcp.stl  wrist_right.stl
urdf/right_hand/urdf/: right_hand_rerun.urdf
